[gd_scene load_steps=10 format=3 uid="uid://dex32wmhj6jqg"]

[ext_resource type="Script" uid="uid://hxnkthumm4a4" path="res://player/player.gd" id="1_0b6jt"]
[ext_resource type="Texture2D" uid="uid://e4ma8wl3u4wm" path="res://player/p_down.png" id="2_qvpcs"]
[ext_resource type="Texture2D" uid="uid://cgny53yp8b56l" path="res://player/p_left.png" id="3_tr6w4"]
[ext_resource type="Texture2D" uid="uid://daigwacw7pf0v" path="res://player/p_right.png" id="4_ulli2"]
[ext_resource type="Texture2D" uid="uid://cn6ed2bsf7rrg" path="res://player/p_up.png" id="5_0la1k"]
[ext_resource type="Script" uid="uid://o7vvw8imkk6g" path="res://interaction/interaction_area.gd" id="6_qvpcs"]

[sub_resource type="SpriteFrames" id="SpriteFrames_3jmlc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_qvpcs")
}],
"loop": true,
"name": &"down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_tr6w4")
}],
"loop": true,
"name": &"left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_ulli2")
}],
"loop": true,
"name": &"right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_0la1k")
}],
"loop": true,
"name": &"up",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0b6jt"]
radius = 63.0
height = 126.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qvpcs"]
size = Vector2(142.75, 118)

[node name="Player" type="CharacterBody2D" groups=["player"]]
script = ExtResource("1_0b6jt")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -88)
sprite_frames = SubResource("SpriteFrames_3jmlc")
animation = &"down"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, -79)
shape = SubResource("CapsuleShape2D_0b6jt")

[node name="InteractionSensor" type="Area2D" parent="."]
position = Vector2(1, 41)
collision_layer = 64
collision_mask = 128
script = ExtResource("6_qvpcs")
metadata/_custom_type_script = "uid://o7vvw8imkk6g"

[node name="InteractionBox" type="CollisionShape2D" parent="InteractionSensor"]
unique_name_in_owner = true
shape = SubResource("RectangleShape2D_qvpcs")
